# PuddingEngine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ReadMe.md  ReadMe.txt  build.sh  clear.sh  conanfile.txt  flatbuf.sh  game_data.bin!  release.sh  rule.md  setup.sh  win.profile  win_build.sh  win_build_debug.sh  win_build_debug_fast.sh
.github/workflows/: run_test.yml
flatbuf/: gamefile.fbs  gen.sh
src/: config.h  main.cpp
src/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h
src/component/: camera.cpp  camera.hpp
src/entity/: entity.cpp  entity.hpp
src/flatbuf/: gamefile_generated.h
src/game/routine/: routine.cpp  routine.hpp
src/gamefile/: gamefile.cpp  gamefile.h
src/graphics/: settings.hpp
src/graphics/opengl/: pgl_pipeline.cpp  pgl_pipeline.hpp
src/logger/: logger.cpp  logger.hpp
src/parser/: gltf_parser.cpp  gltf_parser.hpp
